--- a/index.html
+++ b/index.html
@@ -123,7 +123,12 @@
         <h3 class="estudante-nome">Prof. Orlei </h3>
     </div>
 
-</section>
+                                  </div>
 
 </section>
+                                  <footer class="rodape">
+                                  <img class="rodape-imagem" scr="logo.png" alt="logo do colégio">
+                                  </footer>  
+                                  </body>
+                                  </html>
 
