--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 
 
 
-<li class="cabecalho-lista-item">Escola</li>
+                           <li class="cabecalho-lista-item"><a href=#escola">escola </a></li>
 
 
 
-<li class="cabecalho-lista-item">Estudante</li>
+  <li class="cabecalho-lista-item"><a href="#estudante">estudante</a></li>
 <ul>
 <header>
                                
