--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 
 
-  <li class="cabecalho-lista-item"><a href="#estudante">estudante</a></li>
+                           <li class="cabecalho-lista-item"><a href=#estudante">estudante </a></li>
 <ul>
 <header>
                                
