--- a/index.html
+++ b/index.html
@@ -1,71 +1,23 @@
 <!DOCTYPE html>
-
-
-
 <html lang="en">
-
-
-
+  
 <head>
-
-
-
 <meta charset="UTF-8">
-
-
-
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-
-
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-
 <title>Equipe Alura Start</title>
-
-
-
 <link rel="stylesheet" href="style.css">
-
-
-
 <link rel="preconnect" href="https://fonts.googleapis.com"&gt;
-
-
-
 <link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
-
-
-
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap&quot; rel="stylesheet">
-
-
-
 </head>
 
-
-
 <body>
-
-
-
 <header class="cabecalho">
-
-
-
-<img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
-
-
-
+<img class="cabecalho-imagem" src="alurastart logo.png" alt="logo">
 <ul class="cabecalho-lista">
 
-
-
                            <li class="cabecalho-lista-item"><a href="#escola">escola </a></li>
-
-
-
                            <li class="cabecalho-lista-item"><a href="#estudante">estudante</a></li>
 <ul>
 <header>
