--- a/index.html
+++ b/index.html
@@ -5,39 +5,26 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Equipe Alura Start</title>
+<title>CCM jardim zeballos</title>
 <link rel="stylesheet" href="style.css">
-<link rel="preconnect" href="https://fonts.googleapis.com"&gt;
+<link rel="preconnect" href="https://fonts.googleapis.com
 <link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap&quot; rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body>
 <header class="cabecalho">
 <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo">
 <ul class="cabecalho-lista">
-
-                           <li class="cabecalho-lista-item"><a href="#escola">escola </a></li>
-                           <li class="cabecalho-lista-item"><a href="#estudante">estudante</a></li>
-<ul>
-<header>
-                               
+       <li class="cabecalho-lista-item"><a href="#escola">escola </a></li>
+       <li class="cabecalho-lista-item"><a href="#estudante">estudante</a></li>
+  <ul>
 </header>
-<section class="escola">
+<section id="escola">
 <div class="escola-div-conteudo">
-   
-    <h2 class="escola-titulo">
-    Sobre a escola    
-    </h2>
-
-    <p class="escola-texto-um">
-        O colégio estadual cívico-militar Jardim Zeballos foi fundado há mais de 50 anos
-    </p>
-
-    <p class="escola-texto-dois">
-        A turma do 2B é a melhor turma do colégio!
-    </p>
-
+   <h2 class="escola-titulo">sobre a escola</h2> 
+    <p class="escola-texto-um" O colégio estadual cívico-militar Jardim Zeballos foi fundado há mais de 50 anos
+     <p class="escola-texto-dois"> A turma mais estudiosa e famosa é a 2° serio B. </p>
 </div>
 
 <img src="turma.png" class="turma" alt="imagem que representa a turma do 2B do colégio">
