--- a/index.html
+++ b/index.html
@@ -1,73 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CCM jardim zeballos</title>
+<title>CCM Jardim Zeballos</title>
 <link rel="stylesheet" href="style.css">
-<link rel="preconnect" href="https://fonts.googleapis.com
-<link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
-
 <body>
 <header class="cabecalho">
-<img class="cabecalho-imagem" src="alurastart logo.png" alt="logo">
+<img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
 <ul class="cabecalho-lista">
-       <li class="cabecalho-lista-item"><a href="#escola">escola </a></li>
-       <li class="cabecalho-lista-item"><a href="#estudante">estudante</a></li>
-  <ul>
+<li class="cabecalho-lista-item"><a href="#escola">Escola</a></li>
+<li class="cabecalho-lista-item"><a href="#estudante">Estudante</a></li>
+</ul>
 </header>
 <section id="escola">
 <div class="escola-div-conteudo">
-   <h2 class="escola-titulo">sobre a escola</h2> 
-    <p class="escola-texto-um" O colégio estadual cívico-militar Jardim Zeballos foi fundado há mais de 50 anos
-     <p class="escola-texto-dois"> A turma mais estudiosa e famosa é a 2° serio B. </p>
+<h2 class="escola-titulo">Sobre a Escola</h2>
+<p class="escola-texto-um"> O colégio estadual civico militar Jardim Zeballos A foi inaugurado
+em 1991.</p>
+<p class="escola-texto-dois">A turma mais estudiosa e famosa é a 2o Série B. </p>
 </div>
-
-<img src="turma.png" class="turma" alt="imagem que representa a turma do 2B do colégio">
 </section>
+<section id="estudante">
+<h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+<div class="estudante-todos">
+<span></span>
+<div class="estudante-div">
+<img class="estudante-imagem" src="rafael.jpeg" alt="foto do rafael">
+<h3 class="estudante-nome">Rafael</h3>
 
+</div>
+<div class="estudante-div">
+<img class="estudante-imagem" src="amanda.jpg" alt="foto de amanda">
+<h3 class="estudante-nome">Amanda</h3>
+</div>
+<div class="estudante-div">
+<img class="estudante-imagem" src="aline.jpg" alt="foto de aline">
+<h3 class="estudante-nome">Aline</h3>
+</div>
+<span></span>
+<span></span>
+<div class="estudante-div">
+<img class="estudante-imagem" src="kaue.jpg" alt="foto de kaue">
+<h3 class="estudante-nome">Kauê</h3>
 
-<section class="estudante">
-
-    <h2 class="estudante-titulo">
-        Quem são nossos estudantes?
-    </h2>
-
-    <div class="estudante-div">
-        <img src="amanda.png" class="estudante-imagem" alt="imagem da aluna Amanda">
-        <h3 class="estudante-nome"> Amanda </h3>
-    </div>
-
-    <div class="estudante-div">
-        <img src="rafael.png" class="estudante-imagem" alt="imagem do aluno Rafael">
-        <h3 class="estudante-nome"> Rafael </h3>
-    </div>
-
-    <div class="estudante-div">
-        <img src="kaue.png" class="estudante-imagem" alt="imagem do aluno Kaue">
-        <h3 class="estudante-nome"> Kauê </h3>
-    </div>
-
-    <div class="estudante-div">
-        <img src="aline.png" class="estudante-imagem" alt="imagem da aluna Aline">
-        <h3 class="estudante-nome">Aline</h3>
-    </div>
-
-    <div class="estudante-div">
-        <img src="orlei.png" class="estudante-imagem" alt="imagem do professor Orlei">
-        <h3 class="estudante-nome">Prof. Orlei </h3>
-    </div>
-
-                                  </div>
-
+</div>
+<div class="estudante-div">
+<img class="estudante-imagem" src="orlei.jpg" alt="foto de orlei">
+<h3 class="estudante-nome">Prof Orlei</h3>
+</div>
+<span></span>
+<span></span>
+</div>
 </section>
-                                  <footer class="rodape">
-                                  <img class="rodape-imagem" scr="logo.png" alt="logo do colégio">
-                                  </footer>  
-                                  </body>
-                                  </html>
-
+<footer class="rodape">
+<img class="rodape-imagem" src="alurastart logo.png" alt="logo da alura start">
+</footer>
+</body>
+</html>
